Make player predictions work
* Add p5 dom and prediction form
* Add blockKeypress
* Maintain state between server and /conductor

--- a/public/player/assets/css/style.css
+++ b/public/player/assets/css/style.css
@@ -3,3 +3,40 @@ html, body {
   padding: 0;
   background-color: black;
 }
+
+.predictions-form {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  text-align: center;
+  font-size: 64px;
+  font-family: Roboto, sans-serif;
+}
+
+.form-group {
+  margin: 10px auto;
+}
+
+label {
+  display: block;
+  width: 100%;
+}
+
+input {
+  display: block;
+  width: 80%;
+  margin: 5% auto;
+  font-size: 64px;
+}
+
+button {
+  display: block;
+  width: 80%;
+  height: 100px;
+  margin: 0 auto;
+  font-size: 64px;
+}
