--- a/public/player/assets/css/style.css
+++ b/public/player/assets/css/style.css
@@ -40,3 +40,16 @@ button {
   margin: 0 auto;
   font-size: 64px;
 }
+
+.impressions-form {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  text-align: center;
+  font-size: 64px;
+  font-family: Roboto, sans-serif;
+}
