--- a/public/player/assets/css/style.css
+++ b/public/player/assets/css/style.css
@@ -54,3 +54,31 @@ button {
   font-size: 32px;
   font-family: Roboto, sans-serif;
 }
+
+.input-uncertainty-demo {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  text-align: center;
+  font-size: 32px;
+  font-family: Roboto, sans-serif;
+  color: white;
+}
+
+.position-top {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+}
+
+.position-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
